language-server/src/tests/snapshots/gleam_language_server__tests__hover__hover_assignment_annotation.snap
---
source: language-server/src/tests/hover.rs
expression: "\nfn wibble() {\n    let wobble: Int = 7\n    wobble\n}\n"
---

fn wibble() {
    let wobble: Int = 7
                ▔▔↑    
    wobble
}


----- Hover content (markdown) -----
```gleam
Int
```
