language-server/src/tests/snapshots/gleam_language_server__tests__hover__hover_contextual_type_aliased.snap
---
source: language-server/src/tests/hover.rs
expression: "\nimport wibble/wobble\ntype Local = wobble.Wibble\nconst value = wobble.Wobble\n"
---

import wibble/wobble
type Local = wobble.Wibble
const value = wobble.Wobble
▔▔▔▔▔▔↑▔▔▔▔                


----- Hover content (markdown) -----
```gleam
wobble.Wibble
```
