language-server/src/tests/snapshots/gleam_language_server__tests__hover__hover_contextual_type_annotation_aliased.snap
---
source: language-server/src/tests/hover.rs
expression: "\nimport wibble/wobble\n\ntype Wubble = wobble.Wibble\n\nfn main(wibble: Wubble) {\n  wibble\n}\n"
snapshot_kind: text
---
import wibble/wobble

type Wubble = wobble.Wibble

fn main(wibble: Wubble) {
                ▔▔▔▔▔↑   
  wibble
}


----- Hover content (markdown) -----
```gleam
app.Wubble
```
