language-server/src/tests/snapshots/gleam_language_server__tests__hover__hover_contextual_type_annotation_prelude.snap
---
source: language-server/src/tests/hover.rs
expression: "\nfn add_one(a: Int) -> Int {\n  a + 1\n}\n"
---

fn add_one(a: Int) -> Int {
                      ↑▔▔  
  a + 1
}


----- Hover content (markdown) -----
```gleam
Int
```
