language-server/src/tests/snapshots/gleam_language_server__tests__hover__hover_contextual_type_annotation_unqualified_aliased.snap
---
source: language-server/src/tests/hover.rs
expression: "\nimport wibble/wobble.{type Wibble as Wubble}\n\nfn main(wibble: Wubble) {\n  wibble\n}\n"
---

import wibble/wobble.{type Wibble as Wubble}

fn main(wibble: Wubble) {
                ↑▔▔▔▔▔   
  wibble
}


----- Hover content (markdown) -----
```gleam
Wubble
```
