language-server/src/tests/snapshots/gleam_language_server__tests__hover__hover_for_annotation_in_use.snap
---
source: language-server/src/tests/hover.rs
expression: "\npub fn main() {\n  use something: Int <- todo\n  todo\n}\n"
---

pub fn main() {
  use something: Int <- todo
                 ▔↑▔        
  todo
}


----- Hover content (markdown) -----
```gleam
Int
```
