language-server/src/tests/snapshots/gleam_language_server__tests__hover__hover_for_anonymous_function_annotation.snap
---
source: language-server/src/tests/hover.rs
expression: "\n/// An example type.\npub type Wibble\n\npub fn main() {\n  fn(w: Wibble) { todo }\n}\n"
---

/// An example type.
pub type Wibble

pub fn main() {
  fn(w: Wibble) { todo }
        ▔▔↑▔▔▔          
}


----- Hover content (markdown) -----
```gleam
Wibble
```
 An example type.
